# OPF-GNN

./: .gitignore  README.md  losses.py  model.py  network_sketch.py  pyproject.toml  requirements.txt  train.py
.cursor/rules/: opf-gnn-context.mdc
configs/: canos_case14.yaml  canos_pyg_opf.yaml  canos_sharaf_case57.yaml  canos_small.yaml
data_from_sharaf/: README.md  samples_index.csv
data_from_sharaf/pglib_opf_case57_ieee_sample_000009/: branches.csv  buses.csv  generators.csv  summary.csv
docs/: CANOS_notes.md
scripts/: train.py  verify_canos_outputs.py
src/canos/: __init__.py  data.py  losses.py  model.py  sharaf_csv.py  utils.py
tests/: test_pipeline.py
